--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+}
+
+.max-w-1200 {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.section-py {
+  padding-top: 140px;
+  padding-bottom: 180px;
 }
 
 .logo {
