--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,18 @@
 .read-the-docs {
   color: #888;
 }
+
+.global-nav-wrap > .nav-item {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#fff, #000);
+  background-size: 0 3px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s ease-in-out;
+}
+.global-nav-wrap > .nav-item:hover,
+.global-nav-wrap > .nav-item-active {
+  background-size: 100% 3px;
+  background-position: 0 100%;
+}
