--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
   padding-bottom: 180px;
 }
 
+.section-md-py {
+  padding-top: 80px;
+  padding-bottom: 140px;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
